Screen overflow on mobile fixed

--- a/styles/components/header.less
+++ b/styles/components/header.less
@@ -53,7 +53,4 @@
     font-size: 60px;
     line-height: 1;
   }
-  code {
-    white-space: pre-wrap;
-  }
 }
